welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: not found: value ndB
ndB=0;
^RunFour:5: error: reassignment to val
nbB=nbB+1;
   ^